compiler/tests/snapshots/parser__parser_from_path-2.snap
---
source: tests/parser.rs
expression: err.to_string()
input_file: tests/examples/parser_error/01_func_syntax_error.bakugo
---
 --> 1:10
  |
1 | func h(a {
  |          ^---
  |
  = expected Type
