compiler/tests/snapshots/parser__parser_from_path.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/ast_error/01_func_parameters.bakugo
---
pos:
  - 0
  - 20
pairs:
  - pos:
      - 0
      - 20
    rule: SourceFile
    inner:
      pos:
        - 0
        - 20
      pairs:
        - pos:
            - 0
            - 18
          rule: TopLevelDecl
          inner:
            pos:
              - 0
              - 18
            pairs:
              - pos:
                  - 0
                  - 18
                rule: FunctionDecl
                inner:
                  pos:
                    - 5
                    - 17
                  pairs:
                    - pos:
                        - 5
                        - 9
                      rule: Ident
                      inner: expr
                    - pos:
                        - 9
                        - 15
                      rule: Signature
                      inner:
                        pos:
                          - 9
                          - 14
                        pairs:
                          - pos:
                              - 9
                              - 14
                            rule: Parameters
                            inner:
                              pos:
                                - 10
                                - 13
                              pairs:
                                - pos:
                                    - 10
                                    - 13
                                  rule: ParameterList
                                  inner:
                                    pos:
                                      - 10
                                      - 13
                                    pairs:
                                      - pos:
                                          - 10
                                          - 13
                                        rule: ParameterDecl
                                        inner:
                                          pos:
                                            - 10
                                            - 13
                                          pairs:
                                            - pos:
                                                - 10
                                                - 13
                                              rule: Type
                                              inner:
                                                pos:
                                                  - 10
                                                  - 13
                                                pairs:
                                                  - pos:
                                                      - 10
                                                      - 13
                                                    rule: Ident
                                                    inner: int
                    - pos:
                        - 17
                        - 17
                      rule: StatementList
                      inner: ""
        - pos:
            - 18
            - 19
          rule: Semicolon
          inner: ;
        - pos:
            - 20
            - 20
          rule: EOI
          inner: ""

