compiler/tests/snapshots/parser__parser_from_path@02_comments.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/02_comments.bakugo
---
pos:
  - 0
  - 116
pairs:
  - pos:
      - 0
      - 116
    rule: SourceFile
    inner:
      pos:
        - 0
        - 116
      pairs:
        - pos:
            - 0
            - 114
          rule: TopLevelDecl
          inner:
            pos:
              - 0
              - 114
            pairs:
              - pos:
                  - 0
                  - 114
                rule: FunctionDecl
                inner:
                  pos:
                    - 5
                    - 113
                  pairs:
                    - pos:
                        - 5
                        - 9
                      rule: Ident
                      inner: main
                    - pos:
                        - 9
                        - 12
                      rule: Signature
                      inner:
                        pos:
                          - 9
                          - 11
                        pairs:
                          - pos:
                              - 9
                              - 11
                            rule: Parameters
                            inner: ()
                    - pos:
                        - 113
                        - 113
                      rule: StatementList
                      inner: ""
        - pos:
            - 114
            - 115
          rule: Semicolon
          inner: ;
        - pos:
            - 116
            - 116
          rule: EOI
          inner: ""

