compiler/tests/snapshots/parser__parser_from_path@02_type_def.bakugo.snap
---
source: tests/parser.rs
expression: err.to_string()
input_file: tests/examples/parser_error/02_type_def.bakugo
---
 --> 4:12
  |
4 | 		b string int;
  | 		         ^---
  |
  = expected Semicolon
